change soure dir

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
   <link rel="manifest" href="./manifest.json">
 
-  <title>web-component-designer-demo</title>
+  <title>diagram-designer-demo</title>
   <!-- Needed for import assertions/attributes -->
   <script src="./node_modules/es-module-shims/dist/es-module-shims.js"></script>
 
