multiple fixes, save/load works

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         "dock-spawn-ts/": "./node_modules/dock-spawn-ts/",
         "@node-projects/base-custom-webcomponent/": "./node_modules/@node-projects/base-custom-webcomponent/",
         "@node-projects/base-custom-webcomponent": "./node_modules/@node-projects/base-custom-webcomponent/dist/index.js",
+        "codemirror/": "./node_modules/codemirror/",
       }
     };
     //@ts-ignore
@@ -36,6 +37,9 @@
   <script src="./node_modules/jquery/dist/jquery.min.js"></script>
   <script src="./node_modules/jquery.fancytree/dist/jquery.fancytree-all-deps.min.js"></script>
   <script src="./node_modules/jquery.fancytree/dist/modules/jquery.fancytree.table.js"></script>
+
+  <script src="./node_modules/codemirror/lib/codemirror.js"></script>
+  <script src="./node_modules/codemirror/mode/javascript/javascript.js"></script>
 
   <link rel="stylesheet" href="./node_modules/metro4-dist/css/metro-all.min.css">
 
