--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 
   <script src="./node_modules/codemirror/lib/codemirror.js"></script>
   <script src="./node_modules/codemirror/mode/javascript/javascript.js"></script>
-
+  <script src="./node_modules/codemirror/addon/fold/foldcode.js"></script>
+  <script src="./node_modules/codemirror/addon/fold/foldgutter.js"></script>
+  <script src="./node_modules/codemirror/addon/fold/brace-fold.js"></script>
+ 
   <link rel="stylesheet" href="./node_modules/metro4-dist/css/metro-all.min.css">
 
   <!-- Drag/Drop support on touch devices -->
